refactor: 重構員工模板並更新相關邏輯
- 移除重複的員工詳細資料和列表模板。
- 更新  和  以適應模板變更。
- 修改 、 和  以反映模板和邏輯調整。
- 新增自訂過濾器的模板標籤。

--- a/employee/templates/employee/base.html
+++ b/employee/templates/employee/base.html
@@ -53,9 +53,8 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="navbar-brand"><a href="{% url 'employee_list' %}" style="margin-left: 0;">HR 薪資系統</a></div>
+        <div class="navbar-brand"><a href="{% url 'salary_list' %}" style="margin-left: 0;">HR 薪資系統</a></div>
         <div class="navbar-nav">
-            <a href="{% url 'employee_list' %}">員工列表</a>
             <a href="{% url 'salary_list' %}">薪資管理</a>
             <a href="{% url 'payroll_management' %}">薪資期間</a>
             <a href="{% url 'salary_item_management' %}">薪資項目</a>
