refactor: Change '詳細' button to '薪資' in salary list
- Updated the text of the '詳細' button to '薪資' in employee/templates/employee/salary_list.html for clarity.

--- a/employee/templates/employee/salary_list.html
+++ b/employee/templates/employee/salary_list.html
@@ -152,7 +152,7 @@
                                 </td>
                                 <td>
                                     <div class="action-buttons">
-                                        <a href="{% url 'salary_detail' salary.id %}" class="btn btn-sm btn-info">詳細</a>
+                                        <a href="{% url 'salary_detail' salary.id %}" class="btn btn-sm btn-info">薪資</a>
                                         <a href="{% url 'employee_punches' salary.employee.id %}" class="btn btn-sm btn-primary">打卡</a>
                                     </div>
                                 </td>
