--- a/employee/templates/employee/base.html
+++ b/employee/templates/employee/base.html
@@ -62,6 +62,7 @@
                 <a href="{% url 'employee_punches' employee_id=current_employee.id %}">資訊</a>
             {% endif %}
             {% if user.is_authenticated %}
+                <a href="{% url 'settings' %}">設定</a>
                 <a href="{% url 'logout' %}">登出</a>
             {% else %}
                 <a href="{% url 'login' %}">登入</a>
